dnl Process this file with autoconf to produce a configure script.

AC_INIT(fusesmb.c)
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(fusesmb, 0.7.0)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(config.h)

AC_SUBST(VERSION)
AC_DEFINE(_FILE_OFFSET_BITS,64,[Use 64 bits file offsets])
AC_DEFINE(FUSE_USE_VERSION,11,[Fuse API Version])

CFLAGS="-Wall -W -g -O2"

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
AC_CHECK_PROG(SMBCLIENT,smbclient,yes,no)
test $SMBCLIENT = no && AC_MSG_ERROR([Please install smbclient.])
AC_CHECK_PROG(PYTHON,python,yes,no)
test $PYTHON = no && AC_MSG_ERROR([Please install Python >= 2.3.])
AC_CHECK_PROG(NMBLOOKUP,nmblookup,yes,no)
test $NMBLOOKUP = no && AC_MSG_ERROR([Please install nmblookup.])

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(stdio.h  string.h  stdlib.h  stddef.h  errno.h  fcntl.h  dirent.h  sys/param.h  sys/vfs.h pthread.h )
AC_CHECK_HEADERS(fuse.h,, AC_MSG_ERROR([Please install fuse header files.]))
AC_CHECK_HEADERS(libsmbclient.h,, AC_MSG_ERROR([Please install libsmbclient header files.]))


#jm_CHECK_TYPE_STRUCT_UTIMBUF
#AC_HEADER_MAJOR
#AC_FUNC_ALLOCA
#AC_STRUCT_TM
AC_STRUCT_ST_BLOCKS
#AC_FUNC_CLOSEDIR_VOID
#AC_CHECK_FUNCS(mkfifo)
#AC_CHECK_FUNC(mknod)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_LIB(smbclient, smbc_new_context,, AC_MSG_ERROR([Please install libsmbclient >= 3.0.1 first.]))
AC_CHECK_LIB(pthread, pthread_create,, AC_MSG_ERROR([Please install pthreads library first.]))
AC_CHECK_LIB(fuse, fuse_main,, AC_MSG_ERROR([Please install libfuse >= 1.1 first.]))

AC_OUTPUT(Makefile fusesmb.lsm fusesmb.spec)
